--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
-bigdecimal = { versioin = "0.2.0", features = ["serde"] }
+bigdecimal = { version = "0.2.0", features = ["serde"] }
 tokio = "1.1.1"
 serde = { version = "*", features = ["derive"] }
+ed25519-dalek = "1.0.1"
+blake2 = "0.9.1"
