--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ tokio = "1.1.1"
 serde = { version = "*", features = ["derive"] }
 ed25519-dalek = "1.0.1"
 blake2 = "0.9.1"
+hex = "0.4.2"
+bytes = "1"
