--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,5 @@
-[package]
-name = "nano-node"
-version = "0.1.0"
-authors = ["gak <gak@gak0.com>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-anyhow = "1.0.38"
-bigdecimal = { version = "0.2.0", features = ["serde"] }
-tokio = "1.1.1"
-serde = { version = "*", features = ["derive"] }
-ed25519-dalek = "1.0.1"
-blake2 = "0.9.1"
-hex = "0.4.2"
-bytes = "1"
-bitvec = "0.20.1"
-regex = "1.4.3"
+members = [
+    "nano-node-core"
+]
