--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 
 [dependencies]
 feeless = { path = "../core" }
+
+tokio = { version = "*", features = ["full"] }
+bitvec = "0.20.1"
+#bincode = "1.3.1"
