--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "*", features = ["full"] }
 bitvec = "0.20.1"
 anyhow = "1.0.38"
 rand = "0.8.3"
+serde = { version = "*", features = ["derive"] }
