--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -12,3 +12,5 @@ bitvec = "0.20.1"
 anyhow = "1.0.38"
 rand = "0.8.3"
 serde = { version = "*", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = "0.2"
