--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,5 @@ bitvec = "0.20.1"
 regex = "1.4.3"
 rand = "*"
 
-#ed25519-dalek = "1.0.1"
-ed25519-dalek = { path = "../../ed25519-dalek" }
-#ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
+#ed25519-dalek = { path = "../../ed25519-dalek" }
+ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
