updated libcense and description so i can publish

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,8 @@ name = "feeless"
 version = "0.1.0"
 authors = ["gak <gak@gak0.com>"]
 edition = "2018"
+license = "MIT/Apache-2.0"
+description = "Nano (cryptocurrency) types and utilities, nano addresses, hashing blocks, signing, etc."
 
 [dependencies]
 anyhow = "1.0.38"
