--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,6 @@ ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
 sled = "*"
 
 # pcap only
-pcap-parser = "0.10.1"
-#pnet = "0.27.2"
+
+pcarp = "1.2.0"
 etherparse = "0.9.0"
