full features by default for ease of installation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,12 @@ description = "A Nano (cryptocurrency) node and utilities such as nano addresses
 repository = "https://github.com/gak/feeless"
 
 [features]
+default = ["full"]
 full = ["pcap", "node"]
 node = ["sled"]
 
 # pcap needs node for all the messages.
 pcap = ["node", "pcarp", "etherparse"]
-
-# client = [] # TODO: rpc client
-
-# By default just limit to the core functionality so that it can be used as a crate.
-default = []
 
 [dependencies]
 ansi_term = "0.12"
