--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,14 @@ pcap = ["node", "pcarp", "etherparse"]
 
 [dependencies]
 ansi_term = "0.12"
-async-trait = "*"
+async-trait = "0.1.42"
 hex = "0.4.2"
 anyhow = "1.0.38"
 clap = "3.0.0-beta.2"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 bigdecimal = { version = "0.2.0", features = ["serde"] }
-tokio = { version = "*", features = ["full"] }
+tokio = { version = "1.2.0", features = ["full"] }
 serde = { version = "1.0.123", features = ["derive"] }
 blake2 = "0.9.1"
 bytes = "1.0.1"
@@ -39,7 +39,7 @@ ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
 #ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
 
 # node only
-sled = { version = "*", optional = true }
+sled = { version = "0.34.6", optional = true }
 
 # pcap only
 pcarp = { version = "1.2.0", optional = true }
