--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feeless"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["gak <gak@gak0.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -37,6 +37,11 @@ ed25519-dalek-bip32 = "0.1.1"
 ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
 #ed25519-dalek = { path = "../../ed25519-dalek" }
 #ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
+
+# This is a fix for "multiple `BITS` found" while building.
+# It can be removed once the following is fixed:
+# https://github.com/bitvecto-rs/bitvec/issues/105
+funty = "=1.1.0"
 
 # node only
 sled = { version = "0.34.6", optional = true }
