--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing-subscriber = "0.2"
 bigdecimal = { version = "0.2.0", features = ["serde"] }
 tokio = { version = "1.2.0", features = ["full"] }
 serde = { version = "1.0.123", features = ["derive"] }
+serde_json = "1.0.62"
 blake2 = "0.9.1"
 bytes = "1.0.1"
 bitvec = "0.20.1"
