--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.2.0", features = ["full"] }
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 blake2 = "0.9.1"
+num = "0.3.1"
 bytes = "1.0.1"
 bitvec = "0.20.1"
 regex = "1.4.3"
