--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ license = "MIT OR Apache-2.0"
 description = "A Nano (cryptocurrency) node and utilities such as nano addresses, hashing blocks, signing, etc."
 repository = "https://github.com/feeless/feeless"
 
+[[example]]
+name = "cli"
+
 [features]
 default = ["full"]
 full = ["pcap", "node", "wallet"]
@@ -55,3 +58,6 @@ sled = { version = "0.34.6", optional = true }
 # pcap only
 pcarp = { version = "1.2.0", optional = true }
 etherparse = { version = "0.9.0", optional = true }
+
+[dev-dependencies]
+duct = "0.13.5"
