--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,4 @@ pcarp = { version = "1.2.0", optional = true }
 etherparse = { version = "0.9.0", optional = true }
 
 [dev-dependencies]
-duct = "0.13.5"
-shell-words = "1.0.0"
+cmd_lib = "0.12.0"
