--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "A Nano (cryptocurrency) node and utilities such as nano addresses, hashing blocks, signing, etc."
 repository = "https://github.com/feeless/feeless"
+documentation = "https://docs.rs/feeless/"
+keywords = ["nano", "cryptocurrency", "decentralized"]
+categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
 
 [[example]]
 name = "cli"
