--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ rand = "0.8.3"
 tiny-bip39 = "0.8.0"
 chrono = "0.4.19"
 doc-comment = "0.3.3"
+fd-lock = "2.0.0"
 
 ed25519-dalek-bip32 = "0.1.1"
 
