--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ wallet = []
 pcap = ["node", "pcarp", "etherparse"]
 
 [dependencies]
+num_cpus = "1.0"
 once_cell = "1.7.0"
 ansi_term = "0.12"
 async-trait = "0.1.42"
@@ -33,7 +34,7 @@ clap = "3.0.0-beta.2"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 bigdecimal = { version = "0.2.0", features = ["serde"] }
-tokio = { version = "1.2.0", features = ["full"] }
+tokio = { version = "1.2.0", features = ["full", "rt-multi-thread"] }
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 blake2 = "0.9.1"
