--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,16 +41,13 @@ bytes = "1.0.1"
 bitvec = "0.20.1"
 regex = "1.4.3"
 rand = "0.8.3"
-tiny-bip39 = "0.8.0"
+tiny-bip39 = { git = "https://github.com/Fiono11/tiny-bip39" }
 chrono = "0.4.19"
 doc-comment = "0.3.3"
 fd-lock = "2.0.0"
-
-ed25519-dalek-bip32 = "0.1.1"
-
+thiserror = "1.0.24"
+ed25519-dalek-bip32 = { git = "https://github.com/Fiono11/ed25519-dalek-bip32" }
 ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
-#ed25519-dalek = { path = "../../ed25519-dalek" }
-#ed25519-dalek = { git = "https://github.com/gak/ed25519-dalek.git", branch = "blake2b" }
 
 # This is a fix for "multiple `BITS` found" while building.
 # It can be removed once the following is fixed:
