Fixed PIP package name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
       - name: Install Dependencies
         run: | 
           sudo apt update
-          sudo apt install -y python3 pip3
+          sudo apt install -y python3 python3-pip
           sudo pip3 install docker
