docker test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,5 @@ jobs:
     steps:
       - name: Install Dependencies
         run: | 
-          sudo apt update
-          sudo apt install -y python3 python3-pip
           sudo pip3 install docker
+          docker ps
