--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,5 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Checkout Code
+      - name: Test
         run: python3 test.py
