--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde_json = "1.0.64"
 blake2 = "0.9.1"
 num = "0.4.0"
 bytes = "1.0.1"
-bitvec = "0.21.0"
+bitvec = "0.21.1"
 regex = "1.4.5"
 rand = "0.8.3"
 tiny-bip39 = { git = "https://github.com/Fiono11/tiny-bip39" }
@@ -54,7 +54,7 @@ ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
 # This is a fix for "multiple `BITS` found" while building.
 # It can be removed once the following is fixed:
 # https://github.com/bitvecto-rs/bitvec/issues/105
-funty = "=1.1.0"
+#funty = "=1.1.0"
 
 # node only
 sled = { version = "0.34.6", optional = true }
