--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,15 +10,18 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  linux_arm7:
+    name: Linux ARMv7
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Run tests
-        run: make
-#      - name: Build
-#        run: cargo build --verbose
-#      - name: Run cli tests
-#        run: target
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: armv7-unknown-linux-gnueabihf
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --target armv7-unknown-linux-gnueabihf
