--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,37 +10,21 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  armv7-unknown-linux-gnueabihf:
-    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: armv7-unknown-linux-gnueabihf
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target armv7-unknown-linux-gnueabihf
-
-  aarch64-apple-darwin:
-    name: ARM64 macOS (11.0+, Big Sur+)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: aarch64-apple-darwin
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target aarch64-apple-darwin
+#  armv7-unknown-linux-gnueabihf:
+#    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: stable
+#          target: armv7-unknown-linux-gnueabihf
+#          override: true
+#      - uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: build
+#          args: --release --target armv7-unknown-linux-gnueabihf
 
   x86_64-apple-darwin:
     name: 64-bit macOS (10.7+, Lion+)
@@ -49,27 +33,29 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+#          toolchain: stable
+          toolchain: beta
           target: x86_64-apple-darwin
           override: true
+          default: true
       - uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --release --target x86_64-apple-darwin
+          args: --release
 
-  i686-pc-windows-gnu:
-    name: 64-bit MinGW (Windows 7+)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: i686-pc-windows-gnu
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target i686-pc-windows-gnu
+#  i686-pc-windows-gnu:
+#    name: 64-bit MinGW (Windows 7+)
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: stable
+#          target: i686-pc-windows-gnu
+#          override: true
+#      - uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: build
+#          args: --release --target i686-pc-windows-gnu
