--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,59 +27,57 @@ jobs:
           args: --release --target x86_64-unknown-linux-gnu
       - run: pwd
       - run: find .
-      - uses: softprops/action-gh-release@v1
+      - run: cp ./target/x86_64-unknown-linux-gnu/release/feeless feeless-x86_64-unknown-linux-gnu
+      - run: gzip feeless-x86_64-unknown-linux-gnu
+      - uses: actions/upload-artifact@master
         with:
-          tag_name: 0.1.10  # TODO Just a test
-          files: build/release/feeless
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: feeless-x86_64-unknown-linux-gnu.gz
 
-
-  x86_64-apple-darwin:
-    name: 64-bit macOS (10.7+, Lion+)
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-apple-darwin
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target x86_64-apple-darwin
-
-  x86_64-pc-windows-msvc:
-    name: 64-bit MSVC (Windows 7+)
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-pc-windows-msvc
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target x86_64-pc-windows-msvc
-
-  armv7-unknown-linux-gnueabihf:
-    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: armv7-unknown-linux-gnueabihf
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target armv7-unknown-linux-gnueabihf
-
+#  x86_64-apple-darwin:
+#    name: 64-bit macOS (10.7+, Lion+)
+#    runs-on: macos-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: stable
+#          target: x86_64-apple-darwin
+#          override: true
+#      - uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: build
+#          args: --release --target x86_64-apple-darwin
+#
+#  x86_64-pc-windows-msvc:
+#    name: 64-bit MSVC (Windows 7+)
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: stable
+#          target: x86_64-pc-windows-msvc
+#          override: true
+#      - uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: build
+#          args: --release --target x86_64-pc-windows-msvc
+#
+#  armv7-unknown-linux-gnueabihf:
+#    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: stable
+#          target: armv7-unknown-linux-gnueabihf
+#          override: true
+#      - uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: build
+#          args: --release --target armv7-unknown-linux-gnueabihf
+#
