--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main, ci ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, ci ]
 
 env:
   CARGO_TERM_COLOR: always
