--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -89,6 +89,7 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           path: feeless-x86_64-unknown-linux-gnu.gz
+          working-directory: .
       - uses: softprops/action-gh-release@v1
         with:
           tag_name: 0.1.10  # TODO Just a test
