--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,28 @@ jobs:
           name: feeless-x86_64-unknown-linux-gnu.gz
           path: feeless-x86_64-unknown-linux-gnu.gz
 
+  armv7-unknown-linux-gnueabihf:
+    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: armv7-unknown-linux-gnueabihf
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --release --target armv7-unknown-linux-gnueabihf
+      - run: cp ./target/armv7-unknown-linux-gnueabihf/release/feeless armv7-unknown-linux-gnueabihf
+      - run: gzip armv7-unknown-linux-gnueabihf
+      - uses: actions/upload-artifact@master
+        with:
+          name: feeless-armv7-unknown-linux-gnueabihf.gz
+          path: feeless-armv7-unknown-linux-gnueabihf.gz
+
   x86_64-apple-darwin:
     name: 64-bit macOS (10.7+, Lion+)
     runs-on: macos-latest
@@ -54,51 +76,41 @@ jobs:
           name: feeless-x86_64-apple-darwin
           path: feeless-x86_64-apple-darwin
 
-#  x86_64-pc-windows-msvc:
-#    name: 64-bit MSVC (Windows 7+)
-#    runs-on: windows-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: stable
-#          target: x86_64-pc-windows-msvc
-#          override: true
-#      - uses: actions-rs/cargo@v1
-#        with:
-#          use-cross: true
-#          command: build
-#          args: --release --target x86_64-pc-windows-msvc
-#
-#  armv7-unknown-linux-gnueabihf:
-#    name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: stable
-#          target: armv7-unknown-linux-gnueabihf
-#          override: true
-#      - uses: actions-rs/cargo@v1
-#        with:
-#          use-cross: true
-#          command: build
-#          args: --release --target armv7-unknown-linux-gnueabihf
-#
+  x86_64-pc-windows-msvc:
+    name: 64-bit MSVC (Windows 7+)
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-pc-windows-msvc
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --release --target x86_64-pc-windows-msvc
+      - run: find .
+      - run: cp ./target/x86_64-pc-windows-msvc/release/feeless.exe .
+      - run: 7z a feeless-x86_64-pc-windows-msvc.zip feeless.exe
+      - uses: actions/upload-artifact@master
+        with:
+          name: feeless-x86_64-pc-windows-msvc.zip
+          path: feeless-x86_64-pc-windows-msvc.zip
 
   release:
     name: Release
-    needs: [ x86_64-unknown-linux-gnu ]
+    needs:
+        - x86_64-unknown-linux-gnu
+        - armv7-unknown-linux-gnueabihf
+        - x86_64-apple-darwin
+        - x86_64-pc-windows-msvc
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@master
         with:
-#          name: |
-#            feeless-x86_64-unknown-linux-gnu.gz |
-#            feeless-x86_64-apple-darwin
           working-directory: .
-#          fail_on_unmatched_files: true
       - run: pwd
       - run: find .
       - uses: softprops/action-gh-release@v1
@@ -106,6 +118,8 @@ jobs:
           tag_name: 0.1.10  # TODO Just a test
           files: |
             feeless-x86_64-unknown-linux-gnu.gz
+            feeless-armv7-unknown-linux-gnueabihf.gz
             feeless-x86_64-apple-darwin
+            feeless-x86_64-pc-windows-msvc.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
