--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,12 +25,12 @@ jobs:
           use-cross: true
           command: build
           args: --release --target x86_64-unknown-linux-gnu
-      - run: cp ./target/x86_64-unknown-linux-gnu/release/feeless feeless-x86_64-unknown-linux-gnu
-      - run: gzip feeless-x86_64-unknown-linux-gnu
+      - run: cp ./target/x86_64-unknown-linux-gnu/release/feeless .
+      - run: tar czvf feeless-linux-64.tar.gz feeless
       - uses: actions/upload-artifact@master
         with:
-          name: feeless-x86_64-unknown-linux-gnu.gz
-          path: feeless-x86_64-unknown-linux-gnu.gz
+          name: feeless-linux-64.tar.gz
+          path: feeless-linux-64.tar.gz
 
   armv7-unknown-linux-gnueabihf:
     name: ARMv7 Linux, hardfloat (kernel 3.2, glibc 2.17)
@@ -48,11 +48,11 @@ jobs:
           command: build
           args: --release --target armv7-unknown-linux-gnueabihf
       - run: cp ./target/armv7-unknown-linux-gnueabihf/release/feeless .
-      - run: tar czvf armv7-unknown-linux-gnueabihf.tar.gz
+      - run: tar czvf feeless-linux-armv7.tar.gz feeless
       - uses: actions/upload-artifact@master
         with:
-          name: feeless-armv7-unknown-linux-gnueabihf.tar.gz
-          path: feeless-armv7-unknown-linux-gnueabihf.tar.gz
+          name: feeless-linux-armv7.tar.gz
+          path: feeless-linux-armv7.tar.gz
 
   x86_64-apple-darwin:
     name: 64-bit macOS (10.7+, Lion+)
@@ -71,6 +71,7 @@ jobs:
           args: --release --target x86_64-apple-darwin
       - run: find .
       - run: cp ./target/x86_64-apple-darwin/release/feeless feeless-x86_64-apple-darwin
+      - run: file ./feeless-x86_64-apple-darwin
       - uses: actions/upload-artifact@master
         with:
           name: feeless-x86_64-apple-darwin
