--- a/external/ed25519-dalek/Cargo.toml
+++ b/external/ed25519-dalek/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "ed25519-dalek"
+name = "ed25519-dalek-blake2-feeless"
 version = "1.0.1"
 edition = "2018"
 authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
 readme = "README.md"
 license = "BSD-3-Clause"
-repository = "https://github.com/gak/ed25519-dalek/tree/blake2b"
+repository = "https://github.com/feeless/feeless/tree/main/external/ed25519-dalek"
 homepage = "https://dalek.rs"
 documentation = "https://docs.rs/ed25519-dalek"
 keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
