--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ name = "cli"
 
 [features]
 default = ["full"]
-full = ["pcap", "node", "wallet"]
+full = ["pcap", "node", "wallet", "rpc_client"]
 node = ["sled"]
 wallet = []
+rpc_client = ["reqwest"]
 
 # pcap needs node for all the messages. This could be moved outside of node in the future.
 pcap = ["node", "pcarp", "etherparse"]
@@ -72,6 +73,9 @@ sled = { version = "0.34.6", optional = true }
 # pcap only
 pcarp = { version = "1.2.0", optional = true }
 etherparse = { version = "0.9.0", optional = true }
+
+# rpc client
+reqwest = { version = "0.11.2", optional = true, features = ["json"] }
 
 [dev-dependencies]
 cmd_lib = "1.0.4"
