--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ default = ["full"]
 full = ["pcap", "node", "wallet", "rpc_client"]
 node = ["sled"]
 wallet = []
-rpc_client = ["reqwest"]
+rpc_client = ["reqwest", "colored_json", "serde_with"]
 
 # pcap needs node for all the messages. This could be moved outside of node in the future.
 pcap = ["node", "pcarp", "etherparse"]
@@ -44,7 +44,7 @@ bytes = "1.0.1"
 bitvec = "0.21.1"
 regex = "1.4.5"
 rand = "0.8.3"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
 doc-comment = "0.3.3"
 fd-lock = "2.0.0"
 thiserror = "1.0.24"
@@ -76,6 +76,8 @@ etherparse = { version = "0.9.0", optional = true }
 
 # rpc client
 reqwest = { version = "0.11.2", optional = true, features = ["json"] }
+colored_json = { version = "2.1.0", optional = true }
+serde_with = { version = "1.8.0", optional = true, features = ["chrono"] }
 
 [dev-dependencies]
 cmd_lib = "1.0.4"
