--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ full = ["pcap", "node", "wallet", "rpc_client", "rpc_server"]
 node = ["sled"]
 wallet = []
 rpc_client = ["reqwest", "colored_json", "serde_with"]
-rpc_server = ["warp"]
+rpc_server = ["warp", "node"]
 
 # pcap needs node for all the messages. This could be moved outside of node in the future.
 pcap = ["node", "pcarp", "etherparse"]
