RPC server part 1 (#66)
* Responds with JSON to localhost:7076 (not configurable)
* Plumbing to send messages from rpc server to node
* Refactor node to be a struct/impl.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ name = "cli"
 
 [features]
 default = ["full"]
-full = ["pcap", "node", "wallet", "rpc_client"]
+full = ["pcap", "node", "wallet", "rpc_client", "rpc_server"]
 node = ["sled"]
 wallet = []
 rpc_client = ["reqwest", "colored_json", "serde_with"]
+rpc_server = ["warp", "node"]
 
 # pcap needs node for all the messages. This could be moved outside of node in the future.
 pcap = ["node", "pcarp", "etherparse"]
@@ -74,10 +75,13 @@ sled = { version = "0.34.6", optional = true }
 pcarp = { version = "1.2.0", optional = true }
 etherparse = { version = "0.9.0", optional = true }
 
-# rpc client
+# rpc_client only
 reqwest = { version = "0.11.2", optional = true, features = ["json"] }
 colored_json = { version = "2.1.0", optional = true }
 serde_with = { version = "1.8.0", optional = true, features = ["chrono"] }
+
+# rpc_server only
+warp = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
 cmd_lib = "1.0.8"
